# polyglot-pigeon

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/polyglot_pigeon/: config.example.yaml  config.py  main.py
src/polyglot_pigeon/content/: __init__.py  chunker.py  cleaner.py
src/polyglot_pigeon/email/: __init__.py  reader.py
src/polyglot_pigeon/llm/: __init__.py  client.py  models.py
src/polyglot_pigeon/mail/: __init__.py  reader.py  sender.py
src/polyglot_pigeon/models/: configurations.py  models.py
src/polyglot_pigeon/prompts/: __init__.py  defaults.yaml  manager.py
src/polyglot_pigeon/scheduler/: __init__.py  pipeline.py  scheduler.py
src/polyglot_pigeon/templates/: digest.html.j2
tests/: test_main.py
tests/unit_tests/: test_chunker.py  test_config.py  test_content_cleaner.py  test_email_reader.py  test_email_sender.py  test_llm.py  test_pipeline.py  test_prompts.py  test_scheduler.py
utilities/: read_emails.py  release.py  run_pipeline.py  send_email.py  test_cleaner.py  test_llm.py  test_pipeline.py
