[project]
name = "polyglot-pigeon"
version = "0.1.0"
description = ""
authors = [
    {name = "marcinstopyra",email = "m.stopyra97@gmail.com"}
]
readme = "README.md"
packages = [{include = "project", from = "src"}]
requires-python = ">=3.12"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.ruff]
include = [
    "src/**.py",
    "tests/**.py",
]
exclude = [
    "*.md",
]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "F",               # pyflakes
    "E4", "E7", "E9",  # pycodestyle
    "I001",            # isort
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]
testpaths = [
    "tests/unit_tests/"
]
log_file_level = "DEBUG"
